--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="animate__animated animate__fadeInTopLeft">
                 <h2>Fora De Órbita</h2>
                 <hr>
-                <h3>Seja bem-vindo(a) a QUERIDA FAMÍLIA UFO 👽🛸</h3>
+                <h3>Seja bem-vindo(a) à QUERIDA FAMÍLIA UFO 👽🛸</h3>
                 <p>Se você chegou aqui é porque quer fugir da Terra, né? Depois de ler nossas regras e as condutas referentes as missões, dá um pulinho no nosso setor de abdução e vem fazer parte dessa família. 
                     <br>
                     <br>
